about portal section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,13 +14,103 @@
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
+
 <div class="dummy" style="display: block;height: 40rem;"></div>
+
+<!--about Section -->
+<section class="about-portal">
+   <div class="section-header-container ">
+    <h3 class="headers-txt headers-txt--green mb-0">عن البوابه</h3>
+   </div>
+   <div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="about-portal-image-container ">
+                <img class="about-portal-image" src="../assets/images/view-of-factory.png">
+            </div>
+        </div>
+        <div class="col-6 info-section">
+            <div class="section-sub-header-container">
+                <h4 class="sub-header-txt sub-header-txt--black mb-0">دليل قطر الصناعى</h4>
+            </div>
+                <p class="section-details section-details--grey">
+                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة 
+                    عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف 
+                    التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان 
+                    كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا 
+                    وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع 
+                    الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك 
+                    وشركات التأمين وشركات النقل والتخليص الجمركى.
+                </p>
+                <div class="read-more-container">
+                    <a href="#" class="btn--trasnparent btn-txt--green btn--lit-rounded read-more">المزيد</a>
+                </div>
+            
+        </div>
+    </div> 
+    </div>
+</section>
+
+<!--sponsers banner section-->
+<section class="section-header-container">
+    <h3 class="headers-txt headers-txt--black">الرعاة المشاركون</h3>
+</section>
+<!--Footer-->
 <footer>
+    <!--slider-->
+    <div class="slider">
+        <div class="slide-track">
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt="" />
+            </div>
+            <div class="slide">
+                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
+            </div>
+        </div>
+    </div>
+
     <!--fixed backgroud-->
     <div class="footer--bg"></div>
    <!--footer logo-->
+   <hr class="custom-line">
     <div class="footer-logo-container ">
-        <img src="../assets/images/Logo.png" class="footer-logo">
+        <img src="../assets/images/Footer-logo.png" class="footer-logo">
     </div>
     <!--Footer Site map -->
     <div class="site-map-container ">
@@ -36,10 +126,23 @@
     <!--Footer Contact info-->
     <div class="contacts-container">
         <ul class="contacts-list">
-            <li class="contact-link"> <span class="icon-Icon-whatsapp"> </span>+974-55754954</li>
-            <li class="contact-link"><span class="icon-Icon-fax"></span>+974-55754954 </li>
-            <li class="contact-link"></li>
-            <li class="contact-link"></li>
+            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-whatsapp"> </span>+</li>
+            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-fax"></span>+ </li>
+            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-phone-alt"></span>+</li>
+            <li class="contact-link">info@madeinqatar.qa<span class="contact-icon icon-Icon-env"></span></li>
         </ul>
+    </div>
+    <!--social-media icons-->
+    <div class="socialMedia-container">
+        <ul class="socialMedia-list">
+            <li class="socialMedia-icon"><span class="icon-Icon-instagram"></span></li>
+            <li class="socialMedia-icon"><span class="icon-Icon-facebook"></span></li>
+            <li class="socialMedia-icon"><span class="icon-Icon-twitter"></span></li>
+            <li class="socialMedia-icon"><span class="icon-Icon-youtube"></span></li>
+        </ul>
+    </div>
+    <!--copyRight-->
+    <div class="copy-rights-container">
+        <span class="copy-rihts-txt">© جميع الحقوق محفوظة 2019 </span>
     </div>
 </footer>
