--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -1,6 +1,6 @@
 ﻿$primary-color: #0E930E;
-$primary-color-hover: rgba(14, 147, 14, 0.568);
+$primary-color-hover: rgba(17, 88, 17, 0.986);
 $secondary-color: #000000;
 $link-color:#5F5F60;
-
-/* identity */
+$header-color:#292929;
+$paragraph-color:#4D4D4D;
