--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -31,7 +31,7 @@ html {
 body {
     text-align: $default-float;
     font-family: $font-family-base;
-    background-color: #ad5757;
+    background-color: #ffffff;
     overflow-x: hidden;
 }
 .rotate-down{
