--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -4,3 +4,5 @@ $secondary-color: #000000;
 $link-color:#5F5F60;
 $header-color:#292929;
 $paragraph-color:#4D4D4D;
+$paragraph-bg-color:#ECECEC;
+$paragraph-sec-color:#262323;
