--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 /*Import Components*/
  @import 'components/btns.scss';
  @import 'components/infinite-carousel';
+ @import 'components/side-menue';
 /*Import pages*/
   @import'pages/home.scss';
 /*Import Layouts*/
