--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,77 @@
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
-
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 <div class="dummy" style="display: block;height: 40rem;"></div>
+
+<!--industrial-section-->
+<section class="industrial-sector">
+    <aside class=" side-menue side-menue--right">
+        <div class="side-menue-image-container">
+            <img class="side-menue__image" src="../assets/images/side-menue.jpg">
+        </div>
+        <div class="side-menue-details">
+            <div class="side-menue-details-header-container">
+                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
+            </div>
+            <div class="side-menue-details-body">
+                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
+                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
+                     ويُستخدم في صناعات المطابع  ودور النشر.
+                     كان لوريم إيبسوم ولايزال المعيار 
+                     للنص الشكلي منذ القرن الخامس عشر 
+                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
+            </div>
+        </div>
+    </aside>
+
+    <div class="industrial-sector-details" style="width: 50rem;"></div>
+
+    <aside class=" side-menue side-menue--left">
+        <div class="side-menue-image-container">
+            <img class="side-menue__image" src="../assets/images/side-menue.jpg">
+        </div>
+        <div class="side-menue-details">
+            <div class="side-menue-details-header-container">
+                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
+            </div>
+            <div class="side-menue-details-body">
+                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
+                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
+                     ويُستخدم في صناعات المطابع  ودور النشر.
+                     كان لوريم إيبسوم ولايزال المعيار 
+                     للنص الشكلي منذ القرن الخامس عشر 
+                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
+            </div>
+        </div>
+    </aside>
+</section>
+
 
 <!--about Section -->
 <section class="about-portal">
