--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -3,6 +3,10 @@
     background-color: rgba($color: $secondary-color, $alpha: .2) ;
     display: flex;
    align-items: center;
+   position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 2;
    .top-nav{
        display: flex;
        align-items: center;
@@ -40,7 +44,7 @@
     list-style-type: none;
     align-items: center;
     margin-bottom: 0;
-
+    
     .nav-tab{
         margin-#{$opposite-float}: 1.5rem;
         a{
