--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,39 +14,50 @@
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../assets/images/Base.jpg" alt="Third slide">
-      </div>
+   
+        <slides-carousel></slides-carousel>
+        
+    
+<br>
+<div style="height: 10rem;"></div>
+<!--Made in UAE info section-->
+<section class="site-guide">
+    <div class="container">
+        <div class="row">
+            <div class="uae-info-header-container">
+                <h3 class="uae-info-header-txt">دليل صنع فى الامارات</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 uae-info-section">
+             
+               <div class="uae-info-paragraph-container">
+                   <p class="uae-info-paragraph-txt">
+                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
+                    <br>
+                    <br>
+                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
+                    <br>
+                    <br>
+                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
+                   </p>
+               </div>
+            </div>
+            <div class="col-6">
+                <div class="uae-info-paragraph-img-container">
+                    <img src="../assets/images/about-bg.png" class="uae-info-paragraph-img"alt="site-guide-background">
+                </div>
+            </div>
+        </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-<div class="dummy" style="display: block;height: 40rem;"></div>
+</section>
+
 
 <!--industrial-section-->
 <section class="industrial-sector">
     <aside class=" side-menue side-menue--right">
         <div class="side-menue-image-container">
-            <img class="side-menue__image" src="../assets/images/side-menue.jpg">
+            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
         </div>
         <div class="side-menue-details">
             <div class="side-menue-details-header-container">
@@ -67,7 +78,7 @@
 
     <aside class=" side-menue side-menue--left">
         <div class="side-menue-image-container">
-            <img class="side-menue__image" src="../assets/images/side-menue.jpg">
+            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
         </div>
         <div class="side-menue-details">
             <div class="side-menue-details-header-container">
