--- a/src/sass/components/_side-menue.scss
+++ b/src/sass/components/_side-menue.scss
@@ -30,7 +30,7 @@
     &-image-container{
         position: relative;
         z-index: -1;
-
+        height:25.831rem
     }
     &-details-header-container{
         display: flex;
@@ -53,6 +53,7 @@
     }
     &__image{
         width: 100%;
+        height: 100%;
     }
     &--right{
         &:after{
