adding home page slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,11 @@
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
-   
-        <slides-carousel></slides-carousel>
-        
-    
+    <slides-carousel></slides-carousel>
 <br>
 <div style="height: 10rem;"></div>
 <!--Made in UAE info section-->
-<section class="site-guide">
+<!-- <section class="site-guide">
     <div class="container">
         <div class="row">
             <div class="uae-info-header-container">
@@ -50,7 +47,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 
 <!--industrial-section-->
@@ -74,7 +71,11 @@
         </div>
     </aside>
 
-    <div class="industrial-sector-details" style="width: 50rem;"></div>
+
+    <div class="industrial-sector-details" style="width: 50rem;background: red;">
+        
+    <muilt-rows-slider></muilt-rows-slider>
+    </div>
 
     <aside class=" side-menue side-menue--left">
         <div class="side-menue-image-container">
