--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
  @import 'components/side-menue';
  @import 'components/slider-carousel';
  @import 'components/search-fied';
+ @import 'components/muilt-row-slider';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
